@@ -45,6 +45,8 @@ Changes since 1.4.0:
   methods to let an application transfer SDOs before activating the master
   (thanks to Stefan Weiser).
 * Fixed SDO upload segment response (thanks to Christoph Peter).
+* Fixed SDO upload segment response for 10 bytes mailbox length (thanks to
+  Joerg Mohre).
 * SDO entry access rights are shown in 'ethercat sdos'.
 * Added 64-bit data access macros to application header.
 * Added debug level for all masters as a module parameter. Thanks to Erwin
